--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,7 @@ apply plugin: 'forge'
 
 version = "1.0"
 group= "tws.zcaliptium.hzdslib" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
-archivesBaseName = "hzdslib"
+archivesBaseName = "HazardsLib-" + mcversion 
 
 minecraft {
     version = "1.7.10-10.13.4.1614-1.7.10"
