Move forge version to gradle.properties.

--- a/build.gradle
+++ b/build.gradle
@@ -22,7 +22,7 @@ group= "tws.zcaliptium.hzdslib" // http://maven.apache.org/guides/mini/guide-nam
 archivesBaseName = "HazardsLib-" + mcversion 
 
 minecraft {
-    version = "1.7.10-10.13.4.1614-1.7.10"
+    version = mcversion + "-" + forgeversion
     runDir = "eclipse"
 }
 
